# stt-llm-translate

./: .env.example  .gitignore  README.md  pyproject.toml  zcheck.py
src/ai_audio_transcription/: __init__.py  audio_convert.py  audio_devices.py  audio_input.py  cli.py  client.py  config.py  logging_config.py  model_catalog.py  processor.py  prompts.py  recorder.py  schemas.py  service.py  transcriber.py
src/ai_audio_transcription/live/: __init__.py  events.py  segmenter.py  session.py
src/ai_audio_transcription/ui/: __init__.py  __main__.py  app.py
